# mkpkg

./: .gitignore  changelog.md  configure  mkpkg.sublime-project  pylint.toml  pylintrc  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  todo.md  tox.ini
.github/workflows/: pylint.yaml  tox.yaml
docs/source/: conf.py  index.rst
mkpkg/: config.yaml  configure.py  interactive.py  mkpkg.py
mkpkg/lib/: __init__.py  helpers.py  logger.py  pathtree.py  tabular.py
src/: mkpkg.py
src/lib/: logger.py  pathtree.py
tests/: test_foo.py
tests/lib/: test_insert_into.py  test_odinal.py  test_parse_path.py  test_tabular.py
