[tool.poetry]
name = "mkpkg"
version = "0.1.0.1"
description = ""
authors = ["Perry Bunn <perry.bunn@noaa.gov>"]
readme = "readme.md"
license = "MPL-2.0-or-later"
repository = "https://github.com/perryBunn/mkpkg"
packages = [{include = "mkpkg"}]
include = [{path = "tests", format="sdist"}]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.sphinx]
extensions = ['sphinx.ext.autodoc']

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.12"
pytest = "^7.2.1"
tox = "^4.4.7"
mypy = "^0.991"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
autoapi = "^2.0.1"
myst-parser = "^1.0.0"
sphinx = "^6.1.3"
sphinx-autoapi = "^2.0.1"

[tool.poetry.scripts]
mkpkg = "mkpkg.mkpkg:terminal"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
